fixed navbar border when collapsed

--- a/views/style.css
+++ b/views/style.css
@@ -74,3 +74,9 @@ footer a:hover {
     text-decoration: none;
     color: black;
 }
+
+@media screen and (max-width:992px) {
+    .nav-item {
+        border: none;
+    }
+}
